--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zingen - Karaokê</title>
@@ -13,6 +13,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="flex gap-1">
+    <a href="#" class="btn btn-sm">Label</a>
+    <button href="#" class="btn btn-md">Label</button>
+    <button href="#" class="btn btn-lg">Label</button>
+  </div>
+
+  <div class="flex gap-1">
+    <a 
+    aria-label="Label" 
+    href="#" class="btn btn-sm"></a>
+    <button 
+    aria-label="Label"
+    href="#" class="btn btn-md"></button>
+    <button 
+    aria-label="Label"
+    href="#" class="btn btn-lg"></button>
+  </div>
 </body>
 </html>
