--- a/index.html
+++ b/index.html
@@ -41,5 +41,33 @@
       <a href="#download" class="btn btn-md">Baixar agora</a>
     </div>
   </section>
+
+  <section id="smartphone-img">
+    <div class="container">
+      <img src="assets/images/smartphones.png" alt="">
+    </div>
+  </section>
+
+  <section id="about">
+    <div class="container even-columns py-xl items-center">
+      <div>
+        <header>
+          <strong>CONHEÇA O APP</strong>
+          <h2>O aplicativo perfeito para aprender a cantar</h2>
+          <p>
+            Nosso algoritmo de Inteligência Artificial permite remover a voz 
+            original e manter as melodias das músicas. Dessa forma, temos o 
+            maior repertório musical para Karaokê! Além disso, ao cantar, sua 
+            voz e afinação é comparada pelo algoritmo permitindo uma avaliação 
+            precisa da sua performance te ajudando a melhorar seu canto. 
+          </p>
+        </header>
+      </div>
+      <div>
+        <img class="desktop-only"
+        src="assets/images/smartphones.png" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
